fix: add a origin patterns